GNOME Bugzilla – Bug 730953
Missing documentation (and annotations) for GstRTSPServer
Last modified: 2014-06-28 08:31:25 UTC
Created attachment 277479 [details] [review] client: add missing documentation to signals Many of the signals in GstRTSPServer have parameters which aren't registered with GType, so G-I ends up with void* instead of the correct types. The comment blocks I've added don't include a description of each signal—it would probably be wise to let someone familiar with the code handle that, and potentially write better descriptions for the parameters... all I really care about are the (type ...) annotations.
I actually used a generic marshaller and the right GType for the context parameters. This is the remainder: commit d08b46f4b7e778c5080ac90de6a7d381bcb0a83f Author: Evan Nemerson <evan@nemerson.com> Date: Tue Jun 24 09:48:45 2014 +0200 gi: improve annotations Fixes https://bugzilla.gnome.org/show_bug.cgi?id=730953