gi: improve annotations

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=730953